<resources>
    <string name="app_name">final_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
<!--
    <string-array name="Week">
        <item> Sunday </item>
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
    </string-array>

    <string-array name="Sunday">
        <item>Mixed Signal Design</item>
        <item>Analog Wave Propagation</item>
        <item>Break</item>
        <item>CT2 Lab - A1\nMSD Lab - A2</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Cluster Elective Lab/Tut</item>
    </string-array>

    <string-array name="Monday">
        <item>Computer Communication Networks</item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Computer Communication Networks</item>
        <item>Mixed Signal Design</item>
        <item>Break</item>
        <item> CT2 Lab - A4\nMSD Lab - A1</item>
    </string-array>

    <string-array name="Tuesday">
        <item>Antenna and Wave Propagation</item>
        <item>Computer Communication Networks</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Department Elective</item>
        <item>Break</item>
        <item> AWP Tutorial</item>
    </string-array>

    <string-array name="Wednesday">
        <item>Antenna and Wave Propagation </item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Department Elective</item>
        <item>Break</item>
        <item> CT2 Lab - A2\nMSD Lab - A3</item>
    </string-array>

    <string-array name="Thursday">
        <item> CT2 Lab - A3\nMSD Lab - A4</item>
        <item>Break</item>
        <item>Mixed Signal Design</item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Department Elective Tut</item>
    </string-array>

    <string-array name="Friday">
        <item>Self Study</item>
        <item>Break</item>
        <item>Self Study</item>
    </string-array>

    <string-array name="time1">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 2:55PM</item>
        <item>2:55PM - 4:45PM</item>
    </string-array>

    <string-array name="time2">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time3">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time4">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time5">
        <item>8:55AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time6">
        <item>8:55AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 1:05PM</item>
    </string-array>-->
</resources>