<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginFragment">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:text="Login"
        android:textColor="#424039"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/tag"
        android:textColor="#424039" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
         />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="#3F51B5"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/swipe_left_for_register"
        android:textColor="#424039"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="169dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>